Lots of renames and refactoring, dealing with empty waypoints.

--- a/public/index.html
+++ b/public/index.html
@@ -21,8 +21,9 @@
 <body>
   <h1>Walking Tour</h1>
   <div id="geolocation">Trying to locate you. Please wait.</div>
+  <div id="saveButton"></div>
   <div id="theMap"></div>
-  <div id="previousLocations"></div>
-  <script src="sketch.js"></script>
+  <div id="waypoints"></div>
+  <script src="client.js"></script>
 </body>
 </html>
