--- a/public/index.html
+++ b/public/index.html
@@ -1,31 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-	<meta charset="UTF-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<meta http-equiv="X-UA-Compatible" content="ie=edge" />
-	<link rel="stylesheet" type="text/css" href="style.css" />
-	<title>Walking Tour</title>
-	<link rel="shortcut icon" href="favicon.ico" />
-	<link rel="apple-touch-icon" href="favicon.png" />
-	<!-- Leaflet CSS and JS includes, via https://leafletjs.com/download.html-->
-	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.5.1/dist/leaflet.css"
-		integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
-		crossorigin="" />
-	<script src="https://unpkg.com/leaflet@1.5.1/dist/leaflet.js"
-		integrity="sha512-GffPMF3RvMeYyc1LWMHtK8EbPv0iNZ8/oTtHPx9/cc2ILxQ+u905qIwdpULaqDkyBKgOaB57QTMg7ztg8Jm2Og=="
-		crossorigin=""></script>
-	<script src="https://unpkg.com/sortablejs"></script>
-</head>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
+		<!-- Bootstrap CSS include, via https://getbootstrap.com/ -->
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+			integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+		<link rel="stylesheet" type="text/css" href="style.css" />
+		<title>Walking Tour</title>
+		<link rel="shortcut icon" href="favicon.ico" />
+		<link rel="apple-touch-icon" href="favicon.png" />
+		<!-- Leaflet CSS and JS includes, via https://leafletjs.com/download.html -->
+		<link rel="stylesheet" href="https://unpkg.com/leaflet@1.5.1/dist/leaflet.css"
+			integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
+			crossorigin="" />
+		<script src="https://unpkg.com/leaflet@1.5.1/dist/leaflet.js"
+			integrity="sha512-GffPMF3RvMeYyc1LWMHtK8EbPv0iNZ8/oTtHPx9/cc2ILxQ+u905qIwdpULaqDkyBKgOaB57QTMg7ztg8Jm2Og=="
+			crossorigin=""></script>
+		<!-- SortableJS include, via https://github.com/SortableJS/Sortable -->
+		<script src="https://unpkg.com/sortablejs@1.10.0-rc3/Sortable.js"></script>
+		<!-- Font Awesome include, via https://fontawesome.com -->
+		<script src="https://kit.fontawesome.com/7646a67a93.js"></script>
+	</head>
 
-<body>
-	<h1>Walking Tour</h1>
-	<div id="geolocation">Trying to locate you. Please wait.</div>
-	<div id="addWaypoint"></div>
-	<div id="theMap"></div>
-	<div id="waypoints"></div>
-	<script src="client.js"></script>
-</body>
+	<body>
+		<h3>Walking Tour</h3>
+		<div id="geolocation">Trying to locate you. Please wait.</div>
+		<div id="addWaypoint"></div>
+		<div id="theMap"></div>
+		<div id="waypoints"></div>
+		<script src="client.js"></script>
+	</body>
 
 </html>
