Adding proper reorder, delete

--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,7 @@
 		<h3>Walking Tour</h3>
 		<div id="geolocation">Trying to locate you. Please wait.</div>
 		<div id="addWaypoint"></div>
+		<div id="saveTour"></div>
 		<div id="theMap"></div>
 		<div id="waypoints"></div>
 		<script src="client.js"></script>
